mvvm - cum eu l-am gandit peste tot in afara de Home , acolo e refacut impreuna cu Marius.

--- a/SpendWithBrain/ViewControllers/addExpense/AddExpense.storyboard
+++ b/SpendWithBrain/ViewControllers/addExpense/AddExpense.storyboard
@@ -42,6 +42,9 @@
                                                 <date key="maximumDate" timeIntervalSinceReferenceDate="1167562800">
                                                     <!--2037-12-31 11:00:00 +0000-->
                                                 </date>
+                                                <connections>
+                                                    <action selector="didSelectDate:" destination="ybH-ll-Rmo" eventType="valueChanged" id="M2E-9I-Vfz"/>
+                                                </connections>
                                             </datePicker>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Amount" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Hy-fa-oPO">
                                                 <rect key="frame" x="8" y="151.5" width="57" height="19.5"/>
@@ -59,6 +62,9 @@
                                                         <real key="value" value="0.0"/>
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <action selector="amountDidChanged:" destination="ybH-ll-Rmo" eventType="editingDidEnd" id="QlC-HD-3Ac"/>
+                                                </connections>
                                             </textField>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MRm-Vm-F3u">
                                                 <rect key="frame" x="8" y="245" width="67" height="19.5"/>
@@ -268,6 +274,9 @@
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="yes"/>
+                                                <connections>
+                                                    <action selector="detailsDidChanged:" destination="ybH-ll-Rmo" eventType="editingDidEnd" id="IL0-vo-Bp1"/>
+                                                </connections>
                                             </textField>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XHK-xd-uoR" userLabel="moreInfoUnderLine">
                                                 <rect key="frame" x="8" y="566" width="300" height="2"/>
@@ -310,7 +319,6 @@
                                             <constraint firstItem="wKW-iG-Klx" firstAttribute="centerX" secondItem="62v-72-FoA" secondAttribute="centerX" id="BmI-Lx-9Hk"/>
                                             <constraint firstItem="0o9-K5-h13" firstAttribute="centerX" secondItem="62v-72-FoA" secondAttribute="centerX" id="G4N-bH-zzY"/>
                                             <constraint firstItem="DN6-Fi-JsF" firstAttribute="leading" secondItem="62v-72-FoA" secondAttribute="leading" constant="8" id="Gjf-V6-2tT"/>
-                                            <constraint firstItem="DN6-Fi-JsF" firstAttribute="centerX" secondItem="62v-72-FoA" secondAttribute="centerX" id="Gti-KQ-AZw"/>
                                             <constraint firstItem="1Hy-fa-oPO" firstAttribute="leading" secondItem="62v-72-FoA" secondAttribute="leading" constant="8" id="HUz-yO-hPG"/>
                                             <constraint firstItem="lsW-QL-Eyw" firstAttribute="centerX" secondItem="62v-72-FoA" secondAttribute="centerX" id="Hft-YI-LDq"/>
                                             <constraint firstItem="aie-ae-Wa0" firstAttribute="centerX" secondItem="62v-72-FoA" secondAttribute="centerX" id="JMe-md-86K"/>
