add ,edit ,delete , table to Marius's example.

--- a/SpendWithBrain/ViewControllers/home/Home.storyboard
+++ b/SpendWithBrain/ViewControllers/home/Home.storyboard
@@ -139,8 +139,8 @@
                                     <action selector="segmentChange:" destination="eah-9Z-BqK" eventType="valueChanged" id="lTd-tH-noz"/>
                                 </connections>
                             </segmentedControl>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jDb-61-2Wc">
-                                <rect key="frame" x="41.333333333333336" y="148" width="42.000000000000007" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total expensed" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jDb-61-2Wc">
+                                <rect key="frame" x="41.333333333333343" y="148" width="116" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
