--- a/SpendWithBrain/ViewControllers/home/Home.storyboard
+++ b/SpendWithBrain/ViewControllers/home/Home.storyboard
@@ -169,6 +169,16 @@
                                             <rect key="frame" x="0.0" y="0.0" width="372.66666666666674" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Bc-sS-voR" customClass="UIButton">
+                                                    <rect key="frame" x="375.66666666666669" y="5" width="90" height="90"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="9Bc-sS-voR" secondAttribute="height" multiplier="1:1" id="KMF-R3-dos"/>
+                                                    </constraints>
+                                                    <connections>
+                                                        <action selector="deleteClick:" destination="tkG-GF-B2A" eventType="touchUpInside" id="erx-it-w2g"/>
+                                                    </connections>
+                                                </view>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pbh-GR-sjN" userLabel="container">
                                                     <rect key="frame" x="5" y="5" width="362.66666666666669" height="90"/>
                                                     <subviews>
@@ -237,12 +247,15 @@
                                                 </view>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="9Bc-sS-voR" firstAttribute="height" secondItem="pbh-GR-sjN" secondAttribute="height" id="8F4-a8-nKT"/>
                                                 <constraint firstItem="pbh-GR-sjN" firstAttribute="top" secondItem="oK5-LT-KuB" secondAttribute="top" constant="5" id="BFs-2a-vxm"/>
+                                                <constraint firstItem="9Bc-sS-voR" firstAttribute="centerY" secondItem="pbh-GR-sjN" secondAttribute="centerY" id="G2N-62-kL3"/>
                                                 <constraint firstItem="pbh-GR-sjN" firstAttribute="centerY" secondItem="oK5-LT-KuB" secondAttribute="centerY" id="dgy-SY-vDS"/>
                                                 <constraint firstItem="pbh-GR-sjN" firstAttribute="centerX" secondItem="oK5-LT-KuB" secondAttribute="centerX" id="hE1-6a-eDa"/>
                                                 <constraint firstAttribute="bottom" secondItem="pbh-GR-sjN" secondAttribute="bottom" constant="5" id="ouc-li-dti"/>
                                                 <constraint firstItem="pbh-GR-sjN" firstAttribute="leading" secondItem="oK5-LT-KuB" secondAttribute="leading" constant="5" id="s39-Wo-hhJ"/>
                                                 <constraint firstAttribute="trailing" secondItem="pbh-GR-sjN" secondAttribute="trailing" constant="5" id="xwV-BF-pj4"/>
+                                                <constraint firstItem="9Bc-sS-voR" firstAttribute="leading" secondItem="pbh-GR-sjN" secondAttribute="trailing" constant="8" id="ydP-cS-Bc5"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -250,6 +263,7 @@
                                             <outlet property="category" destination="lZr-D8-vAm" id="2ey-4Y-kZE"/>
                                             <outlet property="containerView" destination="pbh-GR-sjN" id="2MB-7e-88R"/>
                                             <outlet property="dateOfExp" destination="QKS-N8-eA7" id="YlE-2L-I8z"/>
+                                            <outlet property="deleteBtn" destination="9Bc-sS-voR" id="X3e-j4-BQf"/>
                                             <outlet property="imgCat" destination="sw0-NS-Et8" id="tBb-qh-T8V"/>
                                             <outlet property="incExp" destination="gkf-DX-WeS" id="6X2-Ob-lGh"/>
                                             <outlet property="soldAfterExp" destination="VGb-Md-mEh" id="skN-qb-npD"/>
